<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <com.konzoomer.StoreDetailLinearLayout
            android:paddingRight="6dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView android:id="@+id/name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:singleLine="true"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent">
                <TextView android:id="@+id/addressLine1"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceSmall"
                          android:singleLine="true"/>
                <TextView android:id="@+id/addressLine2"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceSmall"
                          android:singleLine="true"/>
            </LinearLayout>
            <Button android:id="@+id/navigation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_navigation"/>
        </LinearLayout>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/opening_hours_label"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:id="@+id/openingHoursLabels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView android:id="@+id/mondayLabel"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingRight="3dp"
                          android:text="@string/monday_label"/>
                <TextView android:id="@+id/tuesdayLabel"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingRight="3dp"
                          android:text="@string/tuesday_label"/>
                <TextView android:id="@+id/wednesdayLabel"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingRight="3dp"
                          android:text="@string/wednesday_label"/>
                <TextView android:id="@+id/thursdayLabel"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingRight="3dp"
                          android:text="@string/thursday_label"/>
                <TextView android:id="@+id/fridayLabel"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingRight="3dp"
                          android:text="@string/friday_label"/>
                <TextView android:id="@+id/saturdayLabel"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingRight="3dp"
                          android:text="@string/saturday_label"/>
                <TextView android:id="@+id/sundayLabel"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingRight="3dp"
                          android:text="@string/sunday_label"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView android:id="@+id/monday"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingLeft="2dp"/>
                <TextView android:id="@+id/tuesday"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingLeft="2dp"/>
                <TextView android:id="@+id/wednesday"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingLeft="2dp"/>
                <TextView android:id="@+id/thursday"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingLeft="2dp"/>
                <TextView android:id="@+id/friday"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingLeft="2dp"/>
                <TextView android:id="@+id/saturday"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingLeft="2dp"/>
                <TextView android:id="@+id/sunday"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:singleLine="true"
                          android:paddingLeft="2dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:id="@+id/contactPersonLabel"
                      android:visibility="gone"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:singleLine="true"
                      android:paddingRight="3dp"
                      android:text="@string/contact_person_label"/>
            <TextView android:id="@+id/contactPerson"
                      android:visibility="gone"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:singleLine="true"
                      android:paddingLeft="2dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:id="@+id/telephoneLabel"
                      android:visibility="gone"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:singleLine="true"
                      android:paddingRight="3dp"
                      android:text="@string/telephone_label"/>
            <Button android:id="@+id/telephone"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:id="@+id/telefaxLabel"
                      android:visibility="gone"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:singleLine="true"
                      android:paddingRight="3dp"
                      android:text="@string/telefax_label"/>
            <TextView android:id="@+id/telefax"
                      android:visibility="gone"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:singleLine="true"
                      android:paddingLeft="2dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:id="@+id/emailLabel"
                      android:visibility="gone"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:singleLine="true"
                      android:paddingRight="3dp"
                      android:text="@string/email_label"/>
            <Button android:id="@+id/email"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:id="@+id/websiteLabel"
                      android:visibility="gone"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:singleLine="true"
                      android:paddingRight="3dp"
                      android:text="@string/website_label"/>
            <Button android:id="@+id/website"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>
        </LinearLayout>
    </com.konzoomer.StoreDetailLinearLayout>
</ScrollView>
