<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_margin="0dp"
              android:padding="0dp"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:verticalSpacing="0dp">
    <LinearLayout
            android:id="@+id/search_area"
            android:orientation="horizontal"
            android:background="@android:drawable/title_bar"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:verticalSpacing="0dp"
            android:visibility="gone">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="fill_parent"
                  android:layout_marginRight="2dp"
                  android:padding="0dp"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:gravity="center_vertical"
                  android:text="@string/label_search"/>
        <EditText
                android:id="@+id/search_edit"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="0dp"
                android:prompt="@string/choose_category"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:background="@android:drawable/title_bar"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:verticalSpacing="0dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="fill_parent"
                  android:layout_marginRight="2dp"
                  android:padding="0dp"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:gravity="center_vertical"
                  android:text="@string/label_category"/>
        <com.konzoomer.CategoriesSpinner
                android:id="@+id/categories_spinner"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="0dp"
                android:prompt="@string/choose_category"/>
    </LinearLayout>
    <ListView
            android:id="@+id/offers"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
</LinearLayout>
